update java example

--- a/examples/java/d2_camel_cdc/pom.xml
+++ b/examples/java/d2_camel_cdc/pom.xml
@@ -37,7 +37,17 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
+      <artifactId>camel-jsonpath-starter</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-pg-replication-slot-starter</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.springboot</groupId>
+      <artifactId>camel-jackson-starter</artifactId>
       <version>${camel.version}</version>
     </dependency>
 
