--- a/examples/python/pyproject.toml
+++ b/examples/python/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.12"
 sqlalchemy = "^2.0.32"
 pydantic = "^2.8.2"
 psycopg2 = "^2.9.9"
+psycopg = "^3.2.1"
+fastapi = "^0.112.0"
+uvicorn = "^0.30.6"
 
 
 [tool.poetry.group.dev.dependencies]
