--- a/examples/java/d2_camel_cdc/pom.xml
+++ b/examples/java/d2_camel_cdc/pom.xml
@@ -18,7 +18,8 @@
 
   <properties>
     <java.version>17</java.version>
-    <camel.version>4.6.0</camel.version>
+    <camel.version>4.7.0</camel.version>
+    <dhis2.version>2.0.1</dhis2.version>
   </properties>
 
   <dependencies>
@@ -48,6 +49,21 @@
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-jackson-starter</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-api</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-support</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-dhis2</artifactId>
       <version>${camel.version}</version>
     </dependency>
 
