--- a/examples/java/d2_camel_cdc/pom.xml
+++ b/examples/java/d2_camel_cdc/pom.xml
@@ -20,6 +20,7 @@
     <java.version>17</java.version>
     <camel.version>4.7.0</camel.version>
     <dhis2.version>2.0.1</dhis2.version>
+    <debezium.version>2.7.1.Final</debezium.version>
   </properties>
 
   <dependencies>
@@ -48,6 +49,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
+      <artifactId>camel-debezium-postgres-starter</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-jackson-starter</artifactId>
       <version>${camel.version}</version>
     </dependency>
@@ -65,6 +71,22 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-dhis2</artifactId>
       <version>${camel.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.debezium</groupId>
+      <artifactId>debezium-connector-postgres</artifactId>
+      <version>${debezium.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.debezium</groupId>
+      <artifactId>debezium-embedded</artifactId>
+      <version>${debezium.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.debezium</groupId>
+      <artifactId>debezium-core</artifactId>
+      <version>${debezium.version}</version>
     </dependency>
 
     <dependency>
