--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,3 @@
 FROM postgis/postgis:15-3.4
-RUN apt-get -y update && apt-get upgrade && apt-get install -y postgresql-15-wal2json
+RUN apt-get -y update && apt-get -y upgrade
+RUN apt-get install -y postgresql-15-wal2json
