--- a/examples/java/d2_camel_cdc/pom.xml
+++ b/examples/java/d2_camel_cdc/pom.xml
@@ -24,6 +24,16 @@
     <kafka.version>3.8.0</kafka.version>
   </properties>
 
+  <repositories>
+    <!-- Other repositories you may already have -->
+
+    <!-- Confluent Maven Repository -->
+    <repository>
+      <id>confluent</id>
+      <url>https://packages.confluent.io/maven/</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -51,6 +61,16 @@
     <dependency>
       <groupId>org.apache.camel.springboot</groupId>
       <artifactId>camel-debezium-postgres-starter</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.springboot</groupId>
+      <artifactId>camel-kafka-starter</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.springboot</groupId>
+      <artifactId>camel-avro-starter</artifactId>
       <version>${camel.version}</version>
     </dependency>
     <dependency>
@@ -93,6 +113,11 @@
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-clients</artifactId>
       <version>${kafka.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.confluent</groupId>
+      <artifactId>kafka-avro-serializer</artifactId>
+      <version>7.6.2</version>
     </dependency>
 
     <dependency>
