--- a/docker-debezium/compose.yml
+++ b/docker-debezium/compose.yml
@@ -44,6 +44,16 @@ services:
       interval: 1s
       timeout: 5s
       retries: 10
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=root
+    ports:
+      - '5050:80'
+    restart: always
+    depends_on:
+      - pg
 
   broker:
     image: confluentinc/cp-server:7.6.2
