--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -18,3 +18,13 @@ services:
       interval: 1s
       timeout: 5s
       retries: 10
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=root
+    ports:
+      - '5050:80'
+    restart: always
+    depends_on:
+      - pg
